Add lds.html to capture LDS-specific items that are obsolete or out-of-place in the actual standard

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-# Work file for index-creation tool
-gedcom-5.5.2-update.html
+# Work files for index-creation tool
 extensions-update.html
+gedcom-5.5.2-update.html
+lds-update.html
